# logikal-docs

./: .copier-answers.yml  .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml
.github/workflows/: publish-release.yml  test-pull-request.yml
cloud/: .terraform.lock.hcl  config.hcl  main.tf  outputs.tf  terragrunt.hcl  variables.tf
docs/: index.rst
logikal_docs/: __main__.py  app.py  docs.py
logikal_docs/static/css/: logikal_docs.css
logikal_docs/templates/: searchbox.html  versions.html
requirements/: core.txt  dev.txt  docs.txt
requirements/extras/: jupyter.txt
tests/logikal_docs/: test_app.py  test_docs.py
