[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'logikal-docs'
description = 'Documentation management'
readme = 'README.rst'
requires-python = '~= 3.12'
license = 'MIT'
authors = [{name = 'Logikal GmbH', email = 'contact@logikal.io'}]
keywords = ['sphinx']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.12',
  'Framework :: Sphinx',
  'Topic :: Software Development',
  'Topic :: Utilities',
  'Typing :: Typed',
]
dynamic = ['version', 'dependencies', 'optional-dependencies']

[project.scripts]
docs = 'logikal_docs.docs:main'

[project.urls]
'Documentation' = 'https://docs.logikal.io/logikal-docs/'
'Release notes' = 'https://github.com/logikal-io/logikal-docs/releases'
'Issue tracker' = 'https://github.com/logikal-io/logikal-docs/issues'
'Source code' = 'https://github.com/logikal-io/logikal-docs'

[tool.setuptools]
packages = [
  'logikal_docs', 'logikal_docs.templates',
  'logikal_docs.static', 'logikal_docs.static.css', 'logikal_docs.static.css.fonts',
]

[tool.setuptools.dynamic]
dependencies = {file = 'requirements/core.txt'}

[tool.setuptools.dynamic.optional-dependencies]
jupyter = {file = 'requirements/extras/jupyter.txt'}

[tool.setuptools_scm]

[tool.pytest]
norecursedirs = ['build', 'docs/jupyter_execute']

[tool.browser.versions]
chrome = '144.0.7559.60'

[tool.coverage.run]
patch = ['subprocess']
